@@ -1530,7 +1530,7 @@ $_LANG['Customer\'s Documents:'] = 'Dokumenty klienta:';
 $_LANG['Display this form again, when that document is saved'] = 'Wyświetl ten formularz ponownie po dodaniu dokumentu';
 $_LANG['Document number must be an integer!'] = 'Numer dokumentu musi być liczbą całkowitą!';
 $_LANG['Document title is required!'] = 'Tytuł dokumentu jest wymagany!';
-$_LANG['Document type is required!'] = 'Type dokumentu jest wymagany!';
+$_LANG['Document type is required!'] = 'Typ dokumentu jest wymagany!';
 $_LANG['Enter document number'] = 'Wprowadź numer dokumentu';
 $_LANG['Enter document title'] = 'Wprowadź tytuł dokumentu';
 $_LANG['Enter end date in YYYY/MM/DD format (optional)'] = 'Wprowadź datę końcową w formacie RRRR/MM/DD (opcjonalnie)';
