@@ -32,13 +32,15 @@
 		</TD>
 		<TD CLASS="fright" WIDTH="99%" NOWRAP>
 			<INPUT TYPE="TEXT" NAME="invoice[number]" VALUE="{$invoice.number}" SIZE="10" {tip text="Enter invoice number. WARNING! Changing this number can be DANGEROUS!" trigger="number"}>&nbsp;
+			{if $numberplanlist}
 			<SELECT name="invoice[numberplanid]" {tip text="Select numbering plan"}>
 			{foreach item=plan from=$numberplanlist}
 				{assign var=period value=$plan.period}
 				<OPTION value="{$plan.id}"{if $plan.id==$invoice.numberplanid} SELECTED{/if}>{number number=$invoice.number template=$plan.template time=$invoice.cdate} ({$_PERIODS.$period})</OPTION>
-			{foreachelse}
-				<INPUT type="hidden" name="invoice[numberplanid]" value="0">
 			{/foreach}
+			{else}
+				<INPUT type="hidden" name="invoice[numberplanid]" value="0">
+			{/if}
 			</SELECT>
 		</TD>
 	</TR>
